--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="C:\Users\ptcl\Downloads\Mashhood's Work\HACKATHON Resume Builder\stylesheet.css">
 </head>
 <body>
-    <header><h1><center><u><b>Dynamic Resume by MASHHOOD</b></u></center></h1></header>
+    <header><h1><center><u><b>Static Resume by MASHHOOD</b></u></center></h1></header>
     <main></main>
         <form id="resume-form">
             <section>
